crates/quarto-yaml-validation/src/snapshots/quarto_yaml_validation__diagnostic__tests__all_three_formats_snapshot.snap
---
source: crates/quarto-yaml-validation/src/diagnostic.rs
expression: combined
---
=== compact ===
test.yaml:1:6 [Q-1-11] age: Expected number, got string (Hint: Use a numeric value without quotes?)

=== json ===
{
  "code": "Q-1-11",
  "error_kind": {
    "data": {
      "expected": "number",
      "got": "string"
    },
    "type": "TypeMismatch"
  },
  "hints": [
    "Use a numeric value without quotes?"
  ],
  "instance_path": [
    {
      "type": "Key",
      "value": "age"
    }
  ],
  "message": "Expected number, got string",
  "schema_path": [
    "object",
    "number"
  ],
  "source_range": {
    "end_column": 18,
    "end_line": 1,
    "end_offset": 17,
    "filename": "test.yaml",
    "start_column": 6,
    "start_line": 1,
    "start_offset": 5
  }
}

=== human (ANSI stripped) ===
Error: [Q-1-11] YAML Validation Failed
   ╭─[ test.yaml:1:6 ]
   │
 1 │ age: "not a number"
   │      ──────┬─────  
   │            ╰─────── Expected number, got string
───╯
✖ At document path: `age`
ℹ Schema constraint: object > number
ℹ Use a numeric value without quotes?
